Fix ChannelBinaryReader closing when editor is closed during loading
This happens because the underlying FileChannel gets closed when the
thread is interrupted. This is a documented behavior but rather a weird
one, so for now we're using an escape hatch involving non-public API
method `sun.nio.ch.FileChannelImpl#setUninterruptible`.

In the future, once there's just one entry point to the underlying
channel via BinaryReader#read method (implemented as
FileChannel#read(dst, position)), the channel can be checked if it's
still open and reopen if needed. Extra caution should be taken as the
channel might have been closed on purpose for reasons other than
interrupts.